 GnuCOBOL 3.2rc2  (20230210)
 GnuCOBOL 3.2rc3  ASAP
          3.2 final (depending on feedback) around 2023/04/25

 planned for final:
   * extending testsuite and documentation
   * configure: minor checking to set TIME_T_IS_NON_ARITHMETIC
   * investigation of code analysis tools and user feedback


* New GnuCOBOL features

** Support for LINE SEQUENTIAL file type as per COBOL 2022
  * OPEN INPUT-OUTPTUT and REWRITE are allowed
  * validation of data on (RE-)WRITE and READ, active by default,
    can be adjusted with the new runtime option COB_LS_VALIDATE

** New intrinsic functions

  BIT-OF, BIT-TO-CHAR, HEX-OF, HEX-TO-CHAR

** Support for COBOL 2022 directive COBOL-WORDS

** Support for bit operations according to COBOL 2022 with MF compatibility

** Support for additional $SET directives: ODOSLIDE

** Support for the EXTFH interface was heavily improved, now also supporting
   FH--FCD and FH--KEYDEF, fixed use of different attributes and changing
   pointers and now supports - for 32-bit builds - an internal conversion
   between FCD2 and FCD3 for cases where existing programs are coded with FCD2

** OCCURS with multiple VALUEs supported (BS2000 format without FROM/TO)

** new function to call COBOL from C that won't exit the program in case
   of runtime errors or STOP RUN: cob_call_with_exception_check()

** Support for GCOS 7 (Bull) dialect, including:
   * PICTURE strings with L character (variable length fields)
   * CONTROL DIVISION with SUBSTITUTION SECTION (full support) and DEFAULT
     SECTION (partial support)

** Multiple sequential files may be concatenated by specifying multiple
   files with a separator in its ASSIGN name (either directly or via
   environment), see the new runtime options
   COB_SEQ_CONCAT_NAME (defaulting to false) and COB_SEQ_CONCAT_SEP

** Initial "testing support" of CODE-SET clause to convert between ASCII and
   EBCDIC on READ/WRITE/REWRITE for sequential and line-sequential files
