@@ -870,6 +870,10 @@ AT_CHECK([dd_FILENAME2="y" $COBCRUN_DIRECT ./prog2], [0], [], [])
 AT_CHECK([test -f "y"], [0], [], [])
 AT_CHECK([FILENAME2="z" $COBCRUN_DIRECT ./prog2], [0], [], [])
 AT_CHECK([test -f "z"], [0], [], [])
+AT_CHECK([FILENAME2="\"QUOTE\"" $COBCRUN_DIRECT ./prog2], [0], [], [])
+AT_CHECK([test -f "QUOTE"], [0], [], [])
+AT_CHECK([FILENAME2=\'APOST\' $COBCRUN_DIRECT ./prog2], [0], [], [])
+AT_CHECK([test -f "APOST"], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog2], [0], [], [])
 AT_CHECK([test -f "FILENAME2"], [0], [], [])
 
