@@ -14,7 +14,8 @@ NEWS - user visible changes				-*- outline -*-
 * New GnuCOBOL features
 
 ** Support for LINE SEQUENTIAL file type as per COBOL 2022
-  * OPEN INPUT-OUTPTUT and REWRITE are allowed
+  * OPEN INPUT-OUTPUT and REWRITE are allowed (note that INPUT-OUTPUT
+    leads to slower IO for LINE SEQUENTIAL files)
   * validation of data on (RE-)WRITE and READ, active by default,
     can be adjusted with the new runtime option COB_LS_VALIDATE
 
@@ -364,6 +365,9 @@ NEWS - user visible changes				-*- outline -*-
 
 ** in 64-bit environments, the maximum field size was increased from
    268435456 bytes (999999998 bytes for OCCURS UNBOUNDED) to 2 GB
+
+** quotes around filenames and parts that are resolved by environment variables
+   are internally ignored
 
 ** in case of any runtime features being used that are not available an error
    is generated during compile (may be reduced to a warning by -Wunsupported
